--- a/TestApp_Intermodular/TestApp_Intermodular/TestApp_Intermodular.csproj
+++ b/TestApp_Intermodular/TestApp_Intermodular/TestApp_Intermodular.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FontAwesome.Sharp" Version="6.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
   </ItemGroup>
 
   <ItemGroup>
